tests/miniJava/neg/005671_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class void java { }
